--- a/Web Pages/style.css
+++ b/Web Pages/style.css
@@ -5,7 +5,7 @@
     font-family: Arial, sans-serif;
 }
 body {
-    background: url('bg.jpg') no-repeat center center fixed;
+    background: url('Images/background.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
