--- a/Web Pages/ProfilePrivateView.css
+++ b/Web Pages/ProfilePrivateView.css
@@ -43,11 +43,21 @@ body {
     border-radius: 5px;
     transition: transform 0.2s ease-in-out;
 }
+
 .logo:hover {
     filter: drop-shadow(0 0 20px rgba(125, 245, 66, 0.8));
 }
 
-/* Logout Button */
+/* Center Navigation Tabs */
+.nav-center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 15px;
+}
+
+
 .navbar .logout-button {
     margin-left: auto;
     margin-right: 20px;
