--- a/Web Pages/ProfilePrivateView.css
+++ b/Web Pages/ProfilePrivateView.css
@@ -2,6 +2,11 @@
 body {
     background: url('Images/background.jpg') no-repeat center center/cover;
     display: flex;
+    background-attachment: fixed;
+    flex-direction: column;
+    overflow-x: hidden; 
+    overflow-y: auto; /* Allows content to slide */
+    scroll-behavior: smooth;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -76,6 +81,8 @@ body {
 
 /* Main Layout */
 .main-container {
+    position: absolute;
+    top: 120px;
     display: flex;
     gap: 20px;
     width: 90%;
