--- a/Web Pages/SchoolLibrary.css
+++ b/Web Pages/SchoolLibrary.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background: url('images/background.jpg') no-repeat center center/cover;
     margin: 0;
+    background-attachment: fixed; 
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -33,6 +34,9 @@ body {
     top: 15px;
     left: 30px;
     transition: all 0.3;
+}
+.logo:hover {
+    filter: drop-shadow(0 0 20px rgba(125, 245, 66, 0.8));
 }
 
 /* Center Navigation Tabs */
