--- a/Web Pages/HomePage.css
+++ b/Web Pages/HomePage.css
@@ -95,11 +95,7 @@ body {
     transition: transform 0.2s ease-in-out, border 0.3s ease-in-out;;
 }
 
-.navbar a[href="Games.html"] button {
-    border: 2px solid green; 
-    box-shadow: 0 0 10px green; 
-    font-weight: bold;
-}
+.navbar a[href="Games.html"] 
 
 .navbar button:hover{
     transform: scale(1.1);
