--- a/Web Pages/HomePage.css
+++ b/Web Pages/HomePage.css
@@ -168,7 +168,7 @@ body {
     margin-top: auto; 
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
     border-radius: 8px;
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
 }
 
