updated middle text size

--- a/Web Pages/HomePage.css
+++ b/Web Pages/HomePage.css
@@ -8,6 +8,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Header */
@@ -128,6 +130,7 @@ body {
 }
 
 .main-content {
+    
     margin-left: 35px;
     margin-top: 50px;
     min-width: 88%;
