--- a/Web Pages/hangman.css
+++ b/Web Pages/hangman.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 body {
-    background: url('bgHangman.jpg') no-repeat center center fixed;
+    background: url('Images/bgHangman.jpg') no-repeat center center fixed;
     background-size: cover;
     font-family: Arial, sans-serif;
     color: #333;
