--- a/Web Pages/HomePage.css
+++ b/Web Pages/HomePage.css
@@ -10,21 +10,11 @@ body {
     min-height: 100vh;
 }
 
-/* Header */
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    background: none;
-    color: white;
-    position: relative;
-}
 /* Navbar */
 .navbar {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 40px;
     justify-content: space-between;
     width: 100%;
     max-width: 100%;
@@ -34,49 +24,22 @@ body {
     z-index: 1000;
 }
 
+/* Logo aligned with other buttons */
 .navbar .logo {
-    height: 90px;
+    height: 80px;
     margin-left: 20px;
     display: flex;
-}
-
-.navbar .logo {
-    height: 70px;
-    margin-left: 20px;
-    display: flex;
-    position: relative;
-    transition: transform 0.2s ease-in-out;
-}
-
-.navbar .logo::after {
-    content: "";
     position: absolute;
-    top: 0;
-    left: -150%;
-    width: 200%;
-    height: 100%;
-    background: linear-gradient(120deg, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 70%);
-    transform: skewX(-25deg);
-    transition: left 0.8s ease-in-out;
-    opacity: 0;
+    top: 18px;
+    left: 29px;
+    transition: all 0.3s;
 }
-
-.navbar .logo:hover::after {
-    left: 100%;
-    opacity: 1;
-}
-
-.navbar .logo:hover {
-    transform: scale(1.1);
-    transition: transform 0.2s ease-in-out;
-    filter: drop-shadow(0 0 15px rgba(125, 245, 66, 0.8)); 
-}
-
 
 .logo:hover {
-    filter: drop-shadow(0 0 20px rgba(125, 245, 66,0)); 
+    filter: drop-shadow(0 0 20px rgba(125, 245, 66, 0.8));
 }
 
+/* Center Navigation Tabs */
 .nav-center {
     position: absolute;
     left: 50%;
@@ -92,15 +55,14 @@ body {
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
-    transition: transform 0.2s ease-in-out, border 0.3s ease-in-out;;
+    transition: transform 0.2s ease-in-out;
 }
 
-.navbar a[href="Games.html"] 
-
-.navbar button:hover{
-    transform: scale(1.1);
+.navbar a[href="Games.html"] button {
+    border: 2px solid rgb(105, 250, 105); 
 }
 
+/* Login Button */
 .navbar .login {
     margin-left: auto;
     margin-right: 20px;
@@ -111,10 +73,10 @@ body {
     transform: scale(1.1);
 }
 
-
+/* Logo hover effect */
 .navbar .logo:hover {
     transform: scale(1.1);
-    transition: transform 0.2s ease-in-out;
+    transition: transform 0.2s ease-in-out;
 }
 
 /* Main Section */
