--- a/Web Pages/hangman.css
+++ b/Web Pages/hangman.css
@@ -81,23 +81,55 @@ body {
   transform: scale(1.1);
   transition: transform 0.2s ease-in-out;
 }
-/* Main Game Container */
-#game-container {
-  background: rgba(2, 63, 9, 0.68); 
-  border-radius: 15px;
-  padding: 20px;
-  text-align: center;
-  max-width: 720px;
-  width: 85%;
-  margin-top: 85px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+/* Hangman Image */
+#hangman-wrapper {
+    position: relative;
+    width: 200px; 
+    height: 200px;
+    margin: 12px auto;
 }
 
+/* Background Image */
+#hangman-bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* Monkey Parts */
+#hangman-body,
+#hangman-hand-left,
+#hangman-hand-right,
+#hangman-head,
+#hangman-foot-left,
+#hangman-foot-right {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.hidden {
+    display: none;
+}
+/* Game Container */
+#game-container {
+    background: rgba(112, 161, 117, 0.68);  
+    border-radius: 15px;
+    padding: 20px;
+    text-align: center;
+    max-width: 720px;
+    width: 85%;
+    margin-top: 85px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+}
 /* Game Title */
 h1 {
   font-size: 2em;
   margin-bottom: 10px;
-  color: #ff8c42; 
+  color: #ffffff; 
 }
 
 /* Hangman Figure */
@@ -112,14 +144,14 @@ h1 {
   font-size: 1.9em;
   letter-spacing: 9px;
   margin: 12px 0;
-  color: #ffcc00;
+  color: #f5ebc2;
 }
 
 /* Attempts and Tried Letters */
 .info {
   font-size: 1.2em;
   margin: 7px 0;
-  color: #ffd166; 
+  color: #f5ebc2; 
 }
 
 /* Input Container (Aligns Guess Input and Button) */
@@ -205,4 +237,29 @@ h1 {
   background-color: rgba(40, 192, 61, 0.85); 
   padding: 6px 12px;
   border-radius: 5px;
+}
+/* Library Hint Box */
+#library-hint {
+  position: absolute;
+  right: 20px;
+  top:38%;
+  transform: translateY(-50%);
+  width: 205px;
+  padding: 15px;
+  background-color: rgba(255, 85, 85, 0.9);
+  color: white;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 1.1em;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+#library-hint a {
+  color: yellow;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#library-hint a:hover {
+  text-decoration: underline;
 }
