--- a/Web Pages/LoginRegister.css
+++ b/Web Pages/LoginRegister.css
@@ -270,3 +270,8 @@ input::placeholder, select {
     cursor: pointer;
     margin-left: -30px;
 }
+.hidden {
+    display: none !important;
+    visibility: hidden;
+    pointer-events: none;
+}
