Admin profile also made

--- a/Web Pages/ProfilePrivateView.css
+++ b/Web Pages/ProfilePrivateView.css
@@ -372,3 +372,10 @@ h3 {
 .toggle-password:hover {
     color: #3b82f6; /* Highlight when hovered */
 }
+
+#membersContribution,
+#staffContribution,
+#studentsContribution {
+    text-align: left;
+    justify-content: flex-start; 
+}
