Icon/Emoji update
made the icons/emoji as a image to avoid differences in UI for different OS

--- a/Web Pages/ProfilePrivateView.css
+++ b/Web Pages/ProfilePrivateView.css
@@ -445,3 +445,16 @@ h3 {
 #studentAccessCodeMessage::before {
     content: "";
 }
+
+.emoji-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin-right: 4px;
+  }
+  
+.icon {
+    width: 16px;      
+    height: 16px;
+    vertical-align:text-top;
+}
